- added an &exit() function to force Sleep to stop processing within the
  current script environment.
- updated sleep library to force functions to pass exceptions for consumption
  by checkError() in lieu of strings.  This means the error messages are
  somewhat less descriptive but on the other hand you can fully inspect them
  for whatever additional details you want.

2.1-beta 12  (11 Mar 07)
===========
- fixed yet another flurry of line number skew issues.  argh, make it stop!
- renamed &unlambda to &let, this name makes much more sense
- added APIs to the script loader class to compile a script without the
  overhead related to loading the script.  This is useful when a script is
  going to be run in the environment of another script.
- improved tracking of source file information for blocks of code.  error
  messages and closure string representations will now accurately represent
  the code's origin information.
- added an &include function for including code from other sleep scripts.
  included code is included as if it is part of the current source file.
  include(["/path-to/jar-file.jar"], "directory/filename.sl");
- SValue atomic step now returns a copy of the scalar literal and not a
  reference to the scalar.  This prevents constants from being "changed"
  on accident.
- Added a -e|--eval and -x|--expr command line options to sleep.jar; these
  options allow whole scripts/expressions to be specified on the command 
  line for evaluation.
- Updated &indexOf to accept an optional start parameter.
- Updated numerous string functions to allow negative indice parameters.
  &left, &right, &mid, &replaceAt, &strrep, &charAt, &substr, &indexOf
- added a check to &readb to see if the handle is closed prior to attempting
  a read.  If the handle is closed $null is returned.
- fixed bugs in &readb that come about when reading in the last chunk of 
  data that is usually smaller than the total buffer size.  