@@ -1,0 +1,9 @@
+#
+#
+#
+
+$x = 0;
+while ($x < 10)
+{
+   println($x++);
+}
